--- a/app/views/shared/_headers.html.slim
+++ b/app/views/shared/_headers.html.slim
@@ -1,6 +1,10 @@
-h1 CodeReview
+.max-w-7xl.mx-auto.md:px-8
+  .flex.justify-between.items-center.md:py-3
+    h1.text-2xl.font-semibold CodeReview
 
-- if logged_in?
-  = image_tag current_user.avatar_url, width: 20, height: 20
-- else
-  = link_to 'GitHubでログイン', github_login_path, data: { turbo: false }
+    div.flex.items-center.justify-center.gap-3
+      - if logged_in?
+        = image_tag current_user.avatar_url, width: 50, height: 50
+        = link_to 'Logout', '#', method: :delete, data: { turbo: false }
+      - else
+        = link_to 'GitHub Login', github_login_path, data: { turbo: false }
