--- a/app/views/shared/_headers.html.slim
+++ b/app/views/shared/_headers.html.slim
@@ -5,6 +5,6 @@
     div.flex.items-center.justify-center.gap-3
       - if logged_in?
         = image_tag current_user.avatar_url, width: 50, height: 50
-        = link_to 'Logout', '#', method: :delete, data: { turbo: false }
+        = link_to 'Logout', logout_path, data: { turbo_method: :delete }
       - else
         = link_to 'GitHub Login', github_login_path, data: { turbo: false }
