--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html
+html.dark
   head
     title CodeReviews
     meta name="viewport" content="width=device-width,initial-scale=1"
@@ -8,7 +8,8 @@ html
 
     = stylesheet_link_tag "application", "data-turbo-track" => "reload"
     = javascript_include_tag "application", "data-turbo-track" => "reload", "type" => "module"
-
+    script src="https://cdn.jsdelivr.net/npm/uikit@3.21.5/dist/js/uikit.min.js"
+    script src="https://cdn.jsdelivr.net/npm/uikit@3.21.5/dist/js/uikit-icons.min.js"
   body
 
     .min-h-screen.w-full.bg-slate-800.text-white.flex.flex-col
