feat:ファイルの中身を表示

--- a/app/views/repositories/show.html.slim
+++ b/app/views/repositories/show.html.slim
@@ -5,8 +5,9 @@ article.flex.flex-col.justify-center.items-center.w-full
     div.w-1/4.border.border-white.p-4
       ul.uk-accordion.w-full uk-accordion="multiple: true"
         - @files.each do |directory, files|
-          = render 'repositories/acordion_list', directory: directory, files: files
+          = render 'repositories/accordion_list', directory: directory, files: files
 
     div.flex-grow.mx-4
-      div.border.bordere-white.min-h-96.p-4
-
+      div class="border border-white max-h-[500px] h-screen p-4"
+        pre.bg-slate-900.p-4.h-full id='file-content'
+          = @content
