--- a/app/views/repositories/_accordion_list.html.slim
+++ b/app/views/repositories/_accordion_list.html.slim
@@ -4,5 +4,4 @@ li.relative
     span.uk-accordion-icon uk-icon="icon: chevron-down; ratio: 0.8"
   .uk-accordion-content.flex.flex-col.justify-start.items-start
     - files.each do |file|
-      button.py-1.pl-2.hover:underline
-        = file[:path].split('/').last
+      = link_to file[:path].split('/').last, file_repository_path(id: @repository_name, path: file[:path]), class: "py-1 pl-2 hover:underline", data: { turbo_method: :post }
