--- a/app/views/repositories/file.turbo_stream.slim
+++ b/app/views/repositories/file.turbo_stream.slim
@@ -1,3 +1,7 @@
 = turbo_stream.replace 'file-content' do
-  pre.bg-slate-900.p-4.h-full.overflow-scroll id='file-content'
-    = @content
+  div.w-full.h-full.flex.flex-col.justify-start.items-start id='file-content'
+    h2
+      = @path
+    pre.bg-slate-900.p-4.w-full.flex-grow.relative style = 'overflow: auto;'
+      code language = @language
+        = @content
