fix:turboで正常に表示されない不具合修正

--- a/app/views/repositories/file.turbo_stream.slim
+++ b/app/views/repositories/file.turbo_stream.slim
@@ -2,6 +2,6 @@
   div.w-full.h-full.flex.flex-col.justify-start.items-start id='file-content'
     h2
       = @path
-    pre.bg-slate-900.p-4.w-full.flex-grow.relative style = 'overflow: auto;'
+    pre.bg-slate-900.p-4.w-full.flex-grow.relative.overflow-auto
       code language = @language
         = @content
