--- a/app/views/repositories/show.html.slim
+++ b/app/views/repositories/show.html.slim
@@ -9,4 +9,4 @@ article.flex.flex-col.justify-center.items-center.w-full
 
     div.flex-grow.mx-4
       div class="border border-white max-h-[600px] max-w-[800px] h-screen p-4 relative w-full mx-auto"
-        div id='file-content'
+          div.w-full.h-full.flex.flex-col.justify-start.items-start id='file-content' pre-style="bg-slate-900 p-4 w-full flex-grow relative overflow-auto"
