--- a/app/views/repositories/show.html.slim
+++ b/app/views/repositories/show.html.slim
@@ -1,12 +1,13 @@
 article.flex.flex-col.justify-center.items-center.w-full
   h1.font-bold.text-2xl.mb-8 = @repository_name
 
-  div.flex.justify-start.items-start.w-full
+  div.flex.justify-start.items-start.w-full.gap-8
     div.w-1/4.border.border-white.p-4
       ul.uk-accordion.w-full uk-accordion="multiple: true"
         - @files.each do |directory, files|
           = render 'repositories/accordion_list', directory: directory, files: files
 
     div.flex-grow.mx-4
-      div class="border border-white max-h-[600px] max-w-[800px] h-screen p-4 relative w-full mx-auto"
-          div.w-full.h-full.flex.flex-col.justify-start.items-start id='file-content' pre-style="bg-slate-900 p-4 w-full flex-grow relative overflow-auto"
+      div class="border border-white max-h-[600px] max-w-[800px] h-screen p-4 relative w-full mx-auto" id='file-content' pre-style="bg-slate-900 p-4 w-full flex-grow relative overflow-auto"
+
+      div id='code-review' pre-style="border border-white p-4 relative w-full mx-auto mt-16"
