--- a/app/views/repositories/code_review.turbo_stream.slim
+++ b/app/views/repositories/code_review.turbo_stream.slim
@@ -1,18 +1,16 @@
 = turbo_stream.replace 'code-review' do
-  div.border.border-white.p-4.relative.w-full.mx-auto.mt-16 id='code-review'
-    div.w-full.h-full.flex.flex-col.justify-start.items-start
-      h2 コードレビューの結果
+  div class="border border-white max-h-[600px] max-w-[800px] h-full p-4 relative w-full mx-auto mt-16" id='code-review'
+      h2.text-xl コードレビューの結果
 
-      div.w-full.h-full.flex.flex-col.justify-start.items-start
-        - if @code_review.present?
-          h3.font-semibold 良い点
-          ul
-          - @code_review[:good].each do |review|
-            li.text-green-500 = review
+      div.w-full.h-full.flex.flex-col.justify-start.items-start.mt-4
+          h3.text-xl.font-semibold.text-green-500 良い点
+          - if @code_review[:good].present?
+            ul.list-disc
+              - @code_review[:good].each do |good_point|
+                li.ml-8 = good_point
 
-          h3.font-semibold 改善点
-          ul
-          - @code_review[:improve].each do |review|
-            li.text-red-500 = review
-        - else
-          p コードレビューはありません
+          h3.text-xl.font-semibold.text-yellow-500.mt-4 改善点
+          - if @code_review[:improve].present?
+            ul.list-disc
+              - @code_review[:improve].each do |improvement_point|
+                li.ml-8 = improvement_point
