fix:レイアウト修正

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,5 +17,5 @@ html.dark
         = render "shared/headers"
       main.w-full.flex-grow.max-w-7xl.mx-auto.md:p-8
         = yield
-      footer.w-full.bg-white.text-slate-800
+      footer.w-full
         = render "shared/footers"
