--- a/app/views/shared/_footers.html.slim
+++ b/app/views/shared/_footers.html.slim
@@ -1,6 +1,6 @@
-div.max-w-7xl.mx-auto.md:px-8
+div.mx-l.md:px-2
   nav
-    ul.flex.gap-4.justify-center.items-center.md:py-3
+    ul.flex.gap-4.justify-end.items-center.md:py-3
       li = link_to 'トップ', root_path
       li = link_to '利用規約', '#'
       li = link_to 'プライバシーポリシー', '#'
