fix:turboの囲み修正

--- a/app/views/repositories/file.turbo_stream.slim
+++ b/app/views/repositories/file.turbo_stream.slim
@@ -1,12 +1,13 @@
 = turbo_stream.replace 'file-content' do
-  div.border.border-white.p-4.mx-auto id='file-content'
-    div
-      h2
-        = @path
-      div class="overflow-auto max-w-[800px] max-h-[600px] w-screen h-screen bg-slate-900 p-4"
-        pre
-          code language = @language
-            = @content
+  div id="file-content"
+    div.border.border-white.p-4.mx-auto
+      div
+        h2
+          = @path
+        div class="overflow-auto max-w-[800px] max-h-[600px] w-screen h-screen bg-slate-900 p-4"
+          pre
+            code language = @language
+              = @content
 
-  div.w-full.flex.justify-center.items-center.my-8
-    = link_to 'コードレビューしてもらう', code_review_repository_path(id: @repository_name, path: @path) ,class: 'border border-white px-2 py-1 hover:bg-white hover:text-slate-800 transition-all', data: { turbo_method: :post }
+    div.w-full.flex.justify-center.items-center.my-8
+      = link_to 'コードレビューしてもらう', code_review_repository_path(id: @repository_name, path: @path) ,class: 'border border-white px-2 py-1 hover:bg-white hover:text-slate-800 transition-all', data: { turbo_method: :post }
