fix:例愛と調整

--- a/app/views/repositories/file.turbo_stream.slim
+++ b/app/views/repositories/file.turbo_stream.slim
@@ -6,7 +6,7 @@
           = @path
         div class="overflow-auto max-w-[800px] max-h-[600px] w-screen h-screen bg-slate-900 p-4"
           pre
-            code language = @language
+            code.block.w-fit language = @language
               = @content
 
     div.w-full.flex.justify-center.items-center.my-8
