fix:レイアウト修正

--- a/app/views/repositories/file.turbo_stream.slim
+++ b/app/views/repositories/file.turbo_stream.slim
@@ -4,7 +4,7 @@
       div
         h2
           = @path
-        div class="overflow-auto max-w-[800px] max-h-[600px] w-screen h-screen bg-[#181818] p-4"
+        div class="overflow-auto max-w-[800px] max-h-[600px] w-full h-full bg-[#181818] p-4"
           == markdown(@content)
 
     div.w-full.flex.justify-center.items-center.my-8
