--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,8 @@ html.dark
     .min-h-screen.w-full.bg-slate-800.text-white.flex.flex-col
       header.w-full.bg-white.text-slate-800
         = render "shared/headers"
+      div
+        = render "shared/flash"
       main.w-full.flex-grow.max-w-7xl.mx-auto.md:p-8
         = yield
       footer.w-full
