feat:最新コミットのリンクを表示

--- a/app/views/repositories/file.turbo_stream.slim
+++ b/app/views/repositories/file.turbo_stream.slim
@@ -4,6 +4,7 @@
       div
         h2
           = @path
+        = link_to '最新コミット', @commit_url, target: '_blank', ref: 'noopener noreferrer', class: "underline text-pink-300 my-4 inline-block"
         div class="overflow-auto max-w-[800px] max-h-[600px] w-full h-full bg-[#181818] p-4"
           == markdown(@content)
 
