--- a/app/views/shared/_headers.html.slim
+++ b/app/views/shared/_headers.html.slim
@@ -3,10 +3,17 @@
     h1.text-2xl.font-semibold
       = link_to 'CodeReview', root_path
 
-    div.flex.items-center.justify-center.gap-3
+    div.flex.items-center.justify-center.gap-3.py-3
       - if logged_in?
-        = link_to repositories_path do
-          = image_tag current_user.avatar_url, width: 50, height: 50
-        = link_to 'Logout', logout_path, data: { turbo_method: :delete }
+        button.uk-button.uk-button-default.flex.flex-col.items-center.justify-center.border-none type="button"
+          = image_tag current_user.avatar_url, width: 40, height: 40
+          span.text-sm.text-black Menu
+        div.uk-drop.uk-dropdown uk-dropdown="mode: hover"
+          ul.uk-dropdown-nav.uk-nav
+            li
+              = link_to 'リポジトリ一覧', repositories_path
+            li.uk-nav-divider
+            li
+              = link_to 'ログアウト', logout_path, data: { turbo_method: :delete }
       - else
         = link_to 'GitHub Login', '/auth/github', data: { turbo: false }
