--- a/app/views/repositories/code_review.turbo_stream.slim
+++ b/app/views/repositories/code_review.turbo_stream.slim
@@ -4,14 +4,15 @@
 
       - if @code_review.present?
         div.w-full.h-full.flex.flex-col.justify-start.items-start.mt-4
-            h3.text-xl.font-semibold.text-green-500 良い点
-            - if @code_review[:good].present?
-              ul.list-disc
-                - @code_review[:good].each do |good_point|
-                  li.ml-8 = good_point
+          h3.text-xl.font-semibold.text-green-500 良い点
+          - if @code_review[:good].present?
+            ul.list-disc
+              - @code_review[:good].each do |good_point|
+                li.ml-8 = good_point
 
-            h3.text-xl.font-semibold.text-yellow-500.mt-4 改善点
-            - if @code_review[:improve].present?
-              ul.list-disc
-                - @code_review[:improve].each do |improvement_point|
-                  li.ml-8 = improvement_point
+          h3.text-xl.font-semibold.text-yellow-500.mt-4 改善点
+          - if @code_review[:improve].present?
+            ul.list-disc
+              - @code_review[:improve].each do |improvement_point|
+                li.ml-8 = improvement_point
+          = link_to '保存', repository_review_logs_path(@repository_name), class: 'uk-button uk-button-default my-4 text-white m-auto', data: { turbo_method: :post }
