--- a/app/views/repositories/file.turbo_stream.slim
+++ b/app/views/repositories/file.turbo_stream.slim
@@ -2,6 +2,8 @@
   div id="file-content"
     - unless @code_review.nil?
       = render 'repositories/code_review', code_review: @code_review
+    - else
+      div id='code-review' pre-style="mb-4 text-xl font-semibold text-green-500 list-disc ml-8 text-yellow-500"
     div.border.border-white.p-4.mx-auto
       div
         h2
