--- a/app/views/static_pages/index.html.slim
+++ b/app/views/static_pages/index.html.slim
@@ -1,4 +1,6 @@
-h1 Hello World!
+h1.text-center.text-3xl
+  span.px-4.border-b.border-white Rails Code Review
+p.text-center.my-3.text-xl あなたのRailsコードをレビューします
 
 - unless logged_in?
   .w-full
@@ -8,3 +10,18 @@ h1 Hello World!
       = f.submit 'コードレビューをもらう', class: "uk-button uk-button-default text-white hover:bg-white hover:text-slate-800 m-auto", data: { target: "try_code_review.submitButton" }, disabled: true
 
     div id='code-review' pre-style="border border-white max-h-[600px] max-w-[800px] h-full p-4 relative w-full mx-auto mt-16 text-xl flex flex-col justify-start items-start mt-4 font-semibold text-green-500 list-disc ml-8 text-red-500"
+
+.my-8
+  h2.text-2xl.text-center ログインすると...？
+  p.text-xl.text-center 以下の機能が使えるようになります
+  ul.border.border-white.list-disc.p-4.w-96.m-auto.my-4
+    li.ml-8
+      | 公開リポジトリからコードを取得してレビュー
+    li.ml-8
+      | レビュー結果を保存して後から見返す
+      br
+      | ※見返せるデータは最新1件のみ
+    li.ml-8
+      | レビュー回数無制限！
+      br
+      | ※ただし保存したレビューは差分がなければ1回のみ
