feat:レビューできるファイルの説明

--- a/app/views/shared/_footers.html.slim
+++ b/app/views/shared/_footers.html.slim
@@ -1,6 +1,5 @@
 div.mx-l.md:px-2
   nav
     ul.flex.gap-4.justify-end.items-center.md:py-3
-      li = link_to 'トップ', root_path
-      li = link_to '利用規約', '#'
-      li = link_to 'プライバシーポリシー', '#'
+      li © 2024 Rails Code Review
+      li = link_to 'とぴ', 'https://x.com/topi_log', target: '_blank', rel: 'noopener noreferrer', class: 'text-pink-400'
