--- a/app/views/shared/_headers.html.slim
+++ b/app/views/shared/_headers.html.slim
@@ -1,7 +1,7 @@
 .max-w-7xl.mx-auto.md:px-8
   .flex.justify-between.items-center.md:py-3
     h1.text-2xl.font-semibold
-      = link_to 'CodeReview', root_path
+      = link_to 'Rails Code Review', root_path
 
     div.flex.items-center.justify-center.gap-3.py-3
       - if logged_in?
