--- a/app/views/shared/_footers.html.slim
+++ b/app/views/shared/_footers.html.slim
@@ -2,4 +2,5 @@ div.mx-l.md:px-2
   nav
     ul.flex.gap-4.justify-end.items-center.md:py-3
       li © 2024 Rails Code Review
-      li = link_to 'とぴ', 'https://x.com/topi_log', target: '_blank', rel: 'noopener noreferrer', class: 'text-pink-400'
+      li = link_to 'とぴ', 'https://x.com/topi_log', target: '_blank', rel: 'noopener noreferrer', class: 'text-pink-300'
+      li = link_to '利用規約', page_path('terms_of_service'), class: 'text-pink-300'
