--- a/app/views/repositories/file.turbo_stream.slim
+++ b/app/views/repositories/file.turbo_stream.slim
@@ -12,6 +12,7 @@
         div class="overflow-auto max-w-[800px] max-h-[600px] w-full h-full bg-[#181818] p-4"
           == markdown(@content)
     - if @code_review.nil?
-      div.w-full.flex.justify-center.items-center.my-8
-        = link_to 'コードレビューしてもらう', code_review_repository_path(id: @repository_name, path: @path), class: 'border border-white px-2 py-1 hover:bg-white hover:text-slate-800 transition-all', data: { turbo_method: :post }
+      .w-full.flex.justify-center.items-center.my-8
+        = button_to 'コードレビューしてもらう', code_review_repository_path(id: @repository_name, path: @path), class: 'border border-white px-2 py-1 hover:bg-white hover:text-slate-800 transition-all'
 
+  = render "shared/modal"
