--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html.light
   head
-    title CodeReviews
+    title RailsCodeReviews
     meta name="viewport" content="width=device-width,initial-scale=1"
     = csrf_meta_tags
     = csp_meta_tag
@@ -11,6 +11,7 @@ html.light
     = javascript_include_tag "application", "data-turbo-track" => "reload", "type" => "module"
     script src="https://cdn.jsdelivr.net/npm/uikit@3.21.6/dist/js/uikit.min.js"
     script src="https://cdn.jsdelivr.net/npm/uikit@3.21.6/dist/js/uikit-icons.min.js"
+    = analytics_init if Rails.env.production?
   body
 
     .min-h-screen.w-full.bg-slate-800.text-white.flex.flex-col
