--- a/app/views/repositories/show.html.slim
+++ b/app/views/repositories/show.html.slim
@@ -9,3 +9,5 @@ article.flex.flex-col.justify-center.items-center.w-full
 
     div.flex-grow.mx-4
       div id='file-content' pre-style="max-h-[600px] max-w-[800px] w-screen h-screen  mx-auto bg-slate-900 overflow-auto px-2 py-1 hover:bg-white hover:text-slate-800 transition-all my-8 p-8 w-fit block bg-[#181818] underline text-pink-300 my-4 inline-block"
+
+= render "shared/modal"
