--- a/app/views/shared/_headers.html.slim
+++ b/app/views/shared/_headers.html.slim
@@ -14,6 +14,9 @@
               = link_to 'リポジトリ一覧', repositories_path
             li.uk-nav-divider
             li
+              = link_to 'レビュー記録(α版)', review_logs_path
+            li.uk-nav-divider
+            li
               = link_to 'ログアウト', logout_path, data: { turbo_method: :delete }
       - else
         = link_to 'GitHub Login', '/auth/github', data: { turbo: false }
