レビューログがあるリポジトリ一覧を表示

--- a/app/views/review_logs/index.html.slim
+++ b/app/views/review_logs/index.html.slim
@@ -5,7 +5,7 @@ article.flex.flex-col.justify-center.items-center
     - if @review_logs.present?
       ul.grid.grid-cols-3
         - @review_logs.each do |log|
-          li.w-full = link_to log.repository_name, review_log_path(log.repository_name), class: 'hover:bg-white px-4 py-2 rounded hover:text-slate-800 w-full inline-block transition-all'
+          li.w-full = link_to "#{log.repository_name}：#{log.review_contents.size}件のログ", '#', class: 'hover:bg-white px-4 py-2 rounded hover:text-slate-800 w-full inline-block transition-all'
     - else
       p.text-center まだレビューログがありません
 
